crates/wesl-test/tests/snapshots/testsuite__bulkTests__webgpu-samples__shaders__red.frag.wgsl.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
@fragment
fn main() -> @location(0) vec4<f32> {
    return vec4(1f, 0f, 0f, 1f);
}
